--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,19 +13,19 @@
     <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">    
         <li>
-          <a href="{{ '/' | prepend: site.baseurl }}">Home</a>
+          <a href="{{ '/' | prepend: site.baseurl }}">首页</a>
         </li>
         <li>
-          <a href="{{ '/categories/' | prepend: site.baseurl }}">大类分解</a>
+          <a href="{{ '/categories/' | prepend: site.baseurl }}">分类</a>
         </li>
         <li>
-          <a href="{{ '/tag' | prepend: site.baseurl }}">小类内聚</a>
+          <a href="{{ '/tag' | prepend: site.baseurl }}">标签</a>
+        </li>
+		<li>
+          <a href="{{ '/docs' | prepend: site.baseurl }}">乱七八糟</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li>
-          <a href="{{ '/donate/' | prepend: site.baseurl }}"><strong>打赏</strong></a>
-        </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">关于<b class="caret"></b></a>
           <ul class="dropdown-menu">
